serializzazione Tinkerpop per Graph Explorer